frontend-homologacao/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: "frontend"
    spec:
      containers:
        - name: frontend-container
          image: agrownegocios/frontend:v283
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
      nodeSelector:
        disktype: node-homologacao-frontend
      imagePullSecrets:
        - name: regcred
