frontend-homologacao/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "homologacao.agrownegocios.com.br"
    secretName: homologacao-tls
  - hosts:
    - "backhom.agrownegocios.com.br"
    secretName: backhom-tls
  rules:
  - host: "homologacao.agrownegocios.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-frontend
            port:
              number: 80
  - host: "backhom.agrownegocios.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-backend
            port:
              number: 8080
